--- a/styles.css
+++ b/styles.css
@@ -13,8 +13,8 @@
         /* Selector de ID para el encabezado principal */
         #encabezado-principal {
             text-align: center;
-            color: #247cd3;
-            font-size: 40px;
+            color: #e00000;
+            font-size: 60px;
             padding: 20px;
         }
         
@@ -72,8 +72,8 @@
             position: absolute;
             top: 20px;
             right: 300px;
-            background-color: #e74c3c;
-            color: white;
+            background-color: #fbff00;
+            color: rgb(0, 0, 0);
             padding: 5px 10px;
             border-radius: 3px;
             font-size: 30px;
@@ -85,7 +85,7 @@
             position: fixed;
             top: 0;
             width: 100%;
-            background-color: #1e62a7;
+            background-color: #ff5b5b;
             padding: 10px 0;
             z-index: 1000;
             text-align: center;
@@ -99,7 +99,7 @@
         
         /* Estilos para el pie de pagina */
         .pie-de-pagina {
-            background-color: #1b72c9;
+            background-color: #ff3939;
             color: white;
             text-align: center;
             padding: 20px;
